--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -10,8 +10,39 @@
     "pink": "Pembe"
   },
 
+  "sidebar.user": "Kullanıcı",
+  "sidebar.dash": "Gösterge Paneli",
+  "sidebar.gantt": "Gantt Şeması",
+  "sidebar.pro": "Projeler",
+  "sidebar.this": "Bu Proje",
+  "sidebar.act": "Faaliyet",
+  "sidebar.team": "Takımlar",
+  "sidebar.set": "Ayarlar",
+
+  "sidebar.help": "Sorunlar & Yardım",
+  "sidebar.iss": "Kullanıcı Sorunları",
+  "sidebar.bug": "Hata Raporları",
+
+
   "login":"Giriş Yap",
   "signup":"Kayıt Ol",
+
+  "login.well":"Tekrar Hoş Geldiniz",
+  "login.into":"PlanWise hesabınıza giriş yapın",
+  "login.forgor":"Şifrenizi mi unuttunuz?",
+  "login.reset":"Şifrenizi sıfırlayın",
+
+  "signup.start":"PlanWise ile Başlayın",
+  "signup.create":"Hesabınızı oluşturun ve projelerinizi yönetmeye başlayın",
+  "logout":"Çıkış Yap",
+
+  "forgor.for":"Şifremi Unuttum?",
+  "forgor.email":"E-posta adresinizi girin",
+  "forgor.send":"Sıfırlama Kodunu Gönder",
+  "forgor.pass":"Yeni şifrenizi girin",
+  "forgor.enter":"E-postanıza gelen sıfırlama kodunu girin",
+  "forgor.reset":"Şifreyi Sıfırla",
+  "forgor.back":"Girişe Dön",
 
   "features1": "Proje Yönetimi",
   "features2": "Ekip İş Birliği",
@@ -34,6 +65,7 @@
   "hero3d": "Güvenli",
   "hero4d": "Başlamak İçin",
   "herobutt": "Gösterge Paneline Git",
+  "getStarted": "Ücretsiz Başlayın",
 
   "why-planwise": "Neden PlanWise'ı Seçmelisiniz?",
   "mid1": "Görev Yönetimi",
@@ -174,6 +206,185 @@
     "TCFd": "Görevleri atamaya, iş yüklerini yönetmeye ve PlanWise’ın takım yönetim araçlarıyla verimli bir şekilde işbirliği yapmaya başlayın.",
     "TCFButt": "Başlayın",
     
+    "TT.tit": "Görev Takibi",
+    "TT.subtit": "Projelerinizi kapsamlı görev yönetimiyle kontrol altında tutun",
+    "TT.head": "GÖREVLERİNİZİ TAKİP ETMEYİ ASLA BIRAKMAYIN",
+    "TT.headd": "PlanWise’ın güçlü görev takip sistemi, küçük günlük işlerden karmaşık çok aşamalı iş akışlarına kadar her şeyi yönetmenize yardımcı olur. Herkesin sorumluluklarını yerine getirdiğinden emin olun ve hiçbir şeyin gözden kaçmamasını sağlayın.",
+    "TT.head.task": "Tüm görevlerin tam görünürlüğü",
+    "TT.head.prog": "Proje ilerlemesi",
+    "TT.mid.tit": "Görev Takibini İş Başında Görün",
+    "TT.mid.subtit1": "Yapılacaklar",
+    "TT.mid.subtit2": "Devam Ediyor",
+    "TT.mid.subtit3": "İnceleme",
+    "TT.mid.subtit4": "Tamamlandı",
+
+    "TT.mid.subtit1.1": "Pazar trendlerini araştır",
+    "TT.mid.subtit1.2": "Yeni ürün sayfasını tasarla",
+    "TT.mid.subtit1.3": "Proje teklif taslağı hazırla",
+
+    "TT.mid.subtit2.1": "Kullanıcı dokümantasyonunu güncelle",
+    "TT.mid.subtit2.2": "Yeni özelliği uygula",
+
+    "TT.mid.subtit3.1": "Kod yeniden düzenleme",
+    "TT.mid.subtit3.2": "QA testleri",
+
+    "TT.mid.subtit4.1": "İlk planlama",
+    "TT.mid.subtit4.2": "Paydaş toplantısı",
+    "TT.mid.subtit4.3": "Proje ortamını kur",
+
+    "TT.mid.tit2": "Kapsamlı Görev Yönetim Araçları",
+    "TT.mid.tit2.1": "Görev Yönetimi",
+    "TT.mid.tit2.2": "Zaman Takibi",
+    "TT.mid.tit2.3": "Bildirimler",
+    "TT.mid.tit2.4": "İlerleme Analitiği",
+    "TT.mid.tit2.5": "Özel Etiketler",
+    "TT.mid.tit2.6": "Gelişmiş Filtreleme",
+    "TT.mid.tit2.1d": "Görevleri kolayca oluşturun ve düzenleyin",
+    "TT.mid.tit2.2d": "Görevlere harcanan zamanı izleyin",
+    "TT.mid.tit2.3d": "Görev ilerlemeleri hakkında güncel kalın",
+    "TT.mid.tit2.4d": "Görev tamamlama oranlarına dair görsel içgörüler",
+    "TT.mid.tit2.5d": "Görevleri özelleştirilebilir etiketlerle düzenleyin",
+    "TT.mid.tit2.6d": "Güçlü filtrelerle görevleri hızla bulun",
+
+    "TT.foot.tit": "PlanWise Görev Yönetimini Nasıl Kolaylaştırır?",
+    "TT.foot.tit1": "Sezgisel Görev Oluşturma",
+    "TT.foot.tit2": "Gerçek Zamanlı İlerleme Takibi",
+    "TT.foot.tit1d": "Yeni görev oluşturmak hızlı ve kolaydır. Açıklamalar, son tarihler, öncelik seviyeleri ekleyin ve görevleri saniyeler içinde takım üyelerine atayın.",
+    "TT.foot.tit2d": "Görsel panolar ve detaylı raporlarla görev tamamlama ve proje ilerlemesini gerçek zamanlı olarak izleyin.",
+
+    "TT.task.tit.l": "Yeni Görev",
+    "TT.task.tit.r": "Şablon olarak kaydet",
+    "TT.task1": "Görev adı",
+    "TT.task2": "Atanacak kişi",
+    "TT.task3": "Son tarih",
+    "TT.task4": "Öncelik",
+    "TT.task1.1": "Müşteri sunumunu hazırla",
+    "TT.task3.1": "24 Mart 2025",
+    "TT.task4.1": "Orta",
+
+    "TT.foot.tit1.1": "Basit sürükle-bırak arayüzü",
+    "TT.foot.tit1.2": "Verimlilik için toplu görev oluşturma",
+    "TT.foot.tit1.3": "Yaygın görevler için şablonlar",
+    "TT.foot.tit2.1": "Özelleştirilebilir ilerleme göstergeleri",
+    "TT.foot.tit2.2": "Burndown grafikleri ve hız takibi",
+    "TT.foot.tit2.3": "Otomatik durum güncellemeleri",
+
+    "TTFtit": "Görev Yönetiminizi Kolaylaştırmaya Hazır mısınız?",
+    "TTFtitd": "PlanWise’a katılarak verimliliği artırın ve projelerinizi zamanında teslim edin.",
+    "TTFtitButt": "Başlayın",
+
+
+    "ToS":"Hizmet Koşulları",
+    "ToS.update":"Son güncelleme: 1 Mart 2025",
+
+    "ToS1":"Koşullara Onay",
+    "ToS2":"Kullanıcı Hesapları",
+    "ToS3":"Kabul Edilebilir Kullanım",
+    "ToS4":"Fikri Mülkiyet",
+    "ToS5":"Sorumluluk Sınırlaması",
+    "ToS6":"Koşullardaki Değişiklikler",
+    "ToS7":"Bize Ulaşın",
+
+    "ToS1d":"Bu Hizmet Koşulları (\"Koşullar\"), PlanWise platformuna ve hizmetlerine, web sitemiz, mobil uygulamalarımız ve PlanWise tarafından sunulan diğer yazılım veya hizmetler (\"Hizmetler\") dahil olmak üzere erişiminizi ve kullanımınızı düzenler. Hizmetlerimize erişerek veya bunları kullanarak, bu Koşullara bağlı kalmayı kabul etmiş olursunuz. Bu Koşulları kabul etmiyorsanız, Hizmetlere erişemez veya bunları kullanamazsınız.",
+    "ToS2d":"Hizmetlerin belirli özelliklerine erişmek için bir hesap oluşturmanız gerekebilir. Hesap bilgilerinizi gizli tutmaktan ve hesabınız altında gerçekleşen tüm faaliyetlerden sorumlusunuz. Şunları kabul edersiniz:",
+    "ToS3d":"Hizmetleri aşağıdakiler için kullanmamayı kabul edersiniz:",
+    "ToS4d":"Hizmetler ve içeriği, özellikleri ve işlevleri dahil olmak üzere ancak bunlarla sınırlı olmamak kaydıyla, tüm bilgiler, yazılımlar, metinler, görseller, videolar ve sesler ile bunların tasarımı, seçimi ve düzeni PlanWise veya lisans verenlerine aittir ve telif hakkı, marka, patent, ticari sır ve diğer fikri mülkiyet veya mülkiyet hakları yasaları ile korunmaktadır.",
+    "ToS5d":"PlanWise, yöneticileri, çalışanları, ortakları, temsilcileri, tedarikçileri veya iştirakleri hiçbir durumda dolaylı, tesadüfi, özel, sonuç olarak ortaya çıkan veya cezai zararlardan sorumlu tutulamaz. Bunlara sınırlama olmaksızın şunlar dahildir:",
+    "ToS6d":"Bu Koşulları herhangi bir zamanda değiştirme hakkımız saklıdır. Değişiklik yaparsak, e-posta bildirimi göndererek, Hizmetler aracılığıyla bildirim sağlayarak veya bu Koşulların üst kısmındaki \"Son Güncelleme\" tarihini güncelleyerek sizi bilgilendireceğiz. Revize edilmiş Koşulların yayınlanmasının ardından Hizmetleri kullanmaya devam etmeniz, değişiklikleri kabul ettiğiniz anlamına gelir.",
+    "ToS7d":"Bu Koşullar hakkında herhangi bir sorunuz varsa, lütfen bizimle iletişime geçin:",
+
+    "ToS2.1":"Hesap oluştururken doğru ve eksiksiz bilgi sağlamak",
+    "ToS2.2":"Hesap bilgilerinizi güncel tutmak",
+    "ToS2.3":"Hesabınızın yetkisiz kullanımı konusunda bizi derhal bilgilendirmek",
+    "ToS2.4":"Hesabınız altında gerçekleşen tüm faaliyetlerden sorumlu olmak",
+
+    "ToS3.1":"Geçerli yasa veya yönetmelikleri ihlal etmek",
+    "ToS3.2":"Başkalarının fikri mülkiyet haklarını veya diğer haklarını ihlal eden içerikleri yüklemek, yayınlamak veya aktarmak",
+    "ToS3.3":"Yasadışı, zararlı, tehditkar, istismar edici, taciz edici, iftira niteliğinde veya başka bir şekilde sakıncalı içerik yüklemek, yayınlamak veya aktarmak",
+    "ToS3.4":"Hizmetlerin herhangi bir bölümüne veya Hizmetlere bağlı herhangi bir sisteme veya ağa yetkisiz erişim sağlamaya çalışmak",
+    "ToS3.5":"Hizmetleri veya bunlara bağlı sunucuları veya ağları kesintiye uğratmak veya bozmak",
+
+    "ToS5.1":"Hizmetlere erişiminiz veya kullanımınız ya da bunlara erişememeniz veya kullanamamanız",
+    "ToS5.2":"Hizmetlerde üçüncü tarafların davranışları veya içerikleri",
+    "ToS5.3":"Hizmetlerden elde edilen herhangi bir içerik",
+    "ToS5.4":"İçeriklerinizin veya iletilerinizin yetkisiz erişimi, kullanımı veya değiştirilmesi",
+    "ToS.return":"Ana Sayfaya Dön",
+
+    "PP":"Gizlilik Politikası",
+    "PPd":"Verilerinizi nasıl koruyor ve yönetiyoruz",
+    "PP.update":"Son güncelleme: 1 Mart 2025",
+
+    "PP1":"Giriş",
+    "PP2":"Topladığımız Bilgiler",
+    "PP3":"Bilgilerinizi Nasıl Kullanıyoruz",
+    "PP4":"Veri Güvenliği",
+    "PP5":"Bize Ulaşın",
+
+    "PP1d":"PlanWise'ın Gizlilik Politikasına hoş geldiniz. PlanWise olarak gizliliğinize saygı duyuyor ve kişisel verilerinizi korumaya kararlıyız. Bu Gizlilik Politikası, web sitemizi ziyaret ettiğinizde ve hizmetlerimizi kullandığınızda kişisel verilerinizi nasıl ele aldığımızı ve gizlilik haklarınızı açıklamaktadır.",
+    "PP2d":"Hizmetlerimizi sağlamak ve iyileştirmek için çeşitli amaçlarla farklı türlerde bilgiler topluyoruz:",
+    "PP3d":"Topladığımız bilgileri şu amaçlarla kullanıyoruz:",
+    "PP4d":"Kişisel verilerinizin kazara kaybolmasını, yetkisiz şekilde kullanılmasını, erişilmesini, değiştirilmesini veya ifşa edilmesini önlemek için uygun güvenlik önlemleri aldık. Kişisel verilerinize yalnızca iş açısından gerekli olan çalışanlar, temsilciler, yükleniciler ve diğer üçüncü tarafların erişimi sınırlıdır.",
+    "PP5d":"Bu Gizlilik Politikası hakkında herhangi bir sorunuz varsa, lütfen bizimle iletişime geçin:",
+
+    "PP2.1":"Kişisel Bilgiler:",
+    "PP2.2":"Kullanım Bilgileri:",
+    "PP2.3":"Cihaz Bilgileri:",
+
+    "PP2.1d":"Hesap oluşturduğunuzda adınız, e-posta adresiniz ve diğer iletişim bilgilerinizi topluyoruz.",
+    "PP2.2d":"Hizmetlerimizi nasıl kullandığınıza dair verileri topluyoruz; platformdaki etkinlikleriniz, kullandığınız özellikler ve platformda geçirdiğiniz süre buna dahildir.",
+    "PP2.3d":"Hizmetlerimize erişmek için kullandığınız cihaz hakkında bilgiler topluyoruz; donanım modeli, işletim sistemi ve tarayıcı türü buna dahildir.",
+
+    "PP3.1":"Hizmetlerimizi sağlamak, işletmek ve sürdürmek",
+    "PP3.2":"Hizmetlerimizi iyileştirmek, kişiselleştirmek ve genişletmek",
+    "PP3.3":"Hizmetlerimizi nasıl kullandığınızı anlamak ve analiz etmek",
+    "PP3.4":"Yeni ürünler, hizmetler, özellikler ve işlevler geliştirmek",
+    "PP3.5":"Güncellemeler, güvenlik uyarıları ve destek hakkında sizinle iletişim kurmak",
+    "PP3.6":"Sahtekarlığı tespit etmek ve önlemek",
+
+
+
+    "ASTit": "Ekip çalışmasını daha verimli hale getirmek için buradayız",
+    "ASSubtit": "PlanWise, organizasyonların daha iyi iş birliği ve görev yönetimi ile daha fazlasını başarmalarına yardımcı olma tutkusuna sahip bir ekip tarafından geliştirildi.",
+    "ASd": "Hikayemiz",
+    "ASd1": "PlanWise, mevcut proje yönetim araçlarının ya çok karmaşık ya da çok basit olmasından duyulan hayal kırıklığıyla doğdu. 2025 yılında, kurucularımız kapsamlı özellikler ile sezgisel kullanım arasındaki mükemmel dengeyi sağlayan bir çözüm oluşturmak için yola çıktı.",
+    "ASd2": "Başlangıçta basit bir görev panosu olarak tasarlanan PlanWise, zamanla binlerce ekibin işlerini etkili bir şekilde organize etmesine yardımcı olan tam özellikli bir proje yönetim platformuna dönüştü. Yaklaşımımız, Trello'dan ilham alan görsel iş akışlarını temel alıyor ancak ekiplerin gerçekten ihtiyaç duyduğu özelliklerle genişletildi.",
+    "ASd3": "Bugün, PlanWise her ölçekteki organizasyon tarafından projeleri yönetmek, görevleri takip etmek ve kesintisiz iş birliği sağlamak için kullanılıyor. Kullanıcı geri bildirimlerine dayanarak sürekli gelişmeye devam ediyoruz ve en etkili proje yönetim deneyimini sunmayı hedefliyoruz.",
+    "ASMtit": "Değerlerimiz",
+    "ASMtitd": "Bu temel ilkeler, PlanWise'da yaptığımız her şeye rehberlik eder.",
+    "ASM1": "Öncelik İş Birliği",
+    "ASM2": "Mükemmeliyet",
+    "ASM3": "Sürekli Gelişim",
+    "ASM4": "Kullanıcı Odaklılık",
+    "ASM1d": "İnsanlar etkili bir şekilde birlikte çalıştığında harika şeyler başarılır.",
+    "ASM2d": "Ürünümüzde ve müşteri desteğimizde kaliteye bağlıyız.",
+    "ASM3d": "Kullanıcılarımızın ihtiyaçlarına daha iyi hizmet verebilmek için sürekli öğreniyor ve gelişiyoruz.",
+    "ASM4d": "Aldığımız her karar, kullanıcılarımızın karşılaştığı zorlukları anlamakla başlar.",
+    "AS.user.tit": "Kullanıcılarımız Ne Diyor?",
+    "AS.user.subtit": "Sadece bizim sözümüze güvenmeyin – PlanWise kullanan ekiplerin deneyimlerini dinleyin.",
+    "AS.user1": "PlanWise, pazarlama ekibimizin iş birliği yapma şeklini dönüştürdü. Önceki aracımızdan geçiş yaptıktan sonra verimliliğimiz %30 arttı.",
+    "AS.user2": "Görsel iş akışı ve görev atama özellikleri tam da ihtiyacımız olan şeydi. Proje teslim süremiz büyük ölçüde iyileşti.",
+    "AS.user3": "Uzaktan çalışan bir ekip olarak, herkesi uyum içinde tutacak bir şeye ihtiyacımız vardı. PlanWise, kısıtlayıcı olmadan bize gerekli yapıyı sağladı.",
+    "AS.user1d": "Pazarlama Direktörü",
+    "AS.user2d": "Proje Yöneticisi",
+    "AS.user3d": "Operasyon Lideri",
+    "ASFtit": "Size Taahhüdümüz",
+    "ASF1": "PlanWise'ı, geri bildirimleriniz ve ihtiyaçlarınıza göre sürekli geliştirmeye devam edeceğiz.",
+    "ASF2": "Veri güvenliğiniz ve gizliliğiniz en büyük önceliğimizdir.",
+    "ASF3": "Desteğe ihtiyacınız olduğunda yanınızda olacağız.",
+    "ASF4": "Her özelliği, gerçek iş akışı verimliliğini artıracak şekilde tasarlıyoruz.",
+    "ASFButt": "PlanWise'a Katılın",
+    "faq1": "PlanWise nedir?",
+    "faq2": "Nasıl başlayabilirim?",
+    "faq3": "Ücretsiz bir plan mevcut mu?",
+    "faq4": "Aboneliğimi iptal edebilir miyim?",
+    "faq5": "Verilerim güvende mi?",
+    "faq1a": "PlanWise, ekiplerin iş birliği yapmasına, görevleri organize etmesine ve verimliliği artırmasına yardımcı olmak için tasarlanmış bir proje yönetim aracıdır.",
+    "faq2a": "Ücretsiz bir hesap oluşturun ve projelerinizi dakikalar içinde düzenlemeye başlayın. Kredi kartı gerekmez!",
+    "faq3a": "Evet, temel özelliklere sahip ücretsiz bir plan sunuyoruz. Daha fazla işlevsellik için istediğiniz zaman yükseltebilirsiniz.",
+    "faq4a": "Kesinlikle! Hesap ayarlarınızdan aboneliğinizi dilediğiniz zaman iptal edebilirsiniz.",
+    "faq5a": "Evet, verilerinizi korumak için endüstri standardı şifreleme ve güvenlik önlemleri kullanıyoruz.",
+
+
     "faq.title": "Sıkça Sorulan Sorular",
     "faq.subtitle": "PlanWise hakkında en yaygın soruların cevaplarını bulun."
 
